# translagent

./: Cargo.toml  LICENSE-3RD-PARTY.md  README.md  conf-example.json  conf-example.toml  conf-minimal.toml
src/: config.rs  lib.rs  main.rs
src/config/: v1_0.rs
src/config/spec/: latest.rs
src/config/spec/latest/: errors.rs  tests.rs
src/config/spec/latest/tests/: fuck.toml
src/config/versions/: latest.rs
