[package]
name = "translagent"
authors = ["29 <791603901@qq.com>"]
version = "0.0.3"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["documentation", "ai", "agent", "translation", "llm"]
categories = ["artificial-intelligence", "command-line-utilities", "internationalization", "localization", "text-processing"]
repository = "https://github.com/czy-29/translagent"
homepage = "https://github.com/czy-29/translagent"
description = """
只需要一个toml即可接入的，支持主流SSG的，声明式的，可持续更新/构建的，全自动的，AI文档翻译智能体。
"""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 因为依赖项 `mdbook-driver` 的MSRV是 `1.88.0`。
rust-version = "1.88.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15.22"
dotenvy = "0.15.7"
git2 = "0.20.4"
hickory-proto = { version = "0.25.2", default-features = false }
indexmap = { version = "2.14.0", features = ["serde"] }
mdbook-driver = { version = "0.5.2", features = ["search"] }
relative-path = "2.0.1"
rig-core = "0.34.0"
semver = { version = "1.0.28", features = ["serde"] }
serde = "1.0.228"
serde_with = "3.18.0"
smart-default = "0.7.1"
snafu = "0.9.0"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["chrono"] }
url = { version = "2.5.8", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "0.50.3"

[dev-dependencies]

[build-dependencies]
version_check = "0.9.5"

[features]
